tests/rosetta/out/Pascal/array-length.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:18Z
program ArrayLength;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function main(): integer;
var
  arr: specialize TArray<Variant>;
begin
  arr := specialize TArray<string>(['apple', 'orange', 'pear']);
  writeln('Length of ' + IntToStr(arr) + ' is ' + IntToStr(Length(arr)) + '.');
end;

begin
  main();
end.
